# GM_FCNC_H50_experiment-bound

./: .gitignore  CMakeLists.txt
CHARM/167/GM_FCNC from shijie/: CMakeLists GM.txt
CHARM/167/data/167PS191output/: 167PS191NphiRangeByMass_output.csv  167PS191NphiRangeByTheta_output.csv
CHARM/167/data/GMoutput/: GM_N_phi.csv
CHARM/167/data/input/: 167PS191constraintsdownline.csv  167PS191constraintsfilledarea.csv  167PS191constraintsredline.csv  167PS191constraintsupperline.csv
CHARM/167/src/: 167PS191NphiRangeByMass.cpp  167PS191NphiRangeBytheta.cpp  167PS191NphiTotalRange.cpp  167PS191constraintsfilledarea_Nphi.py  GM_Nphi.py
CHARM/167/src/myenv/: pyvenv.cfg
GM_FCNC from shijie/: Experiment_167.cpp  Experiment_bound_167.cpp  Experiment_bound_167.h
Supernova/170/data/: data.csv  data1.csv  data2.csv  data3.csv  data4.csv  data5.csv  data6.csv  data61.csv  data62.csv  data7.csv  data72.csv
Supernova/170/src/: Gamma_total.cpp  Qphi.py  Qphi170.cpp  Qphi1701.cpp  Qphi1701_lambda1v1tau1.cpp  Qphi1702.cpp  Qphi1702_lambda1v2tau2.cpp  Qphi1703.cpp  Qphi1703_lambda1v1tau2.cpp  Qphi1704.cpp  Qphi1704_lambda2rho_phi1v1tau2.cpp  Qphi1705_lambda2rho_phi1v2tau2.cpp  Qphi1706_lambda2rho_phi2v1tau2.cpp  Qphi1707_lambda2rho_phi2gammatau2.cpp  Qphi170_constant.cpp  lambda comparing.cpp  rho_phi comparing.cpp
Supernova/170/src/myenv/: pyvenv.cfg
data/: 167 DOWN LINE.csv  167 REDLINE.csv  167 UPPER LINE.csv  N_phi_output 167.csv
data/167PS191output/: 167PS191NphiRangeByMass_output.csv  167PS191NphiRangeBytheta_output.csv  167PS191constraintsfilledarea_Nphi.csv
data/GMoutput/: GM_N_phi.csv
include/: NphiRangeByMass167.h  NphiRangeByMassGM.h
obsolete/: NphiRangeByMass GM.cpp  main.cpp
src/: 167PS191NphiRangeByMass.cpp  167PS191NphiRangeBytheta.cpp  167PS191NphiTotalRange.cpp  167PS191constraintsfilledarea_Nphi.py  GM_Nphi.py  NphiRangeByMass 167  NphiRangeByMass 167.cpp  NphiRangeByMass GM  NphiRangeByMass GM.cpp  NphiTotalRange 167  NphiTotalRange 167.cpp  main.cpp
src/myenv/: pyvenv.cfg
